# BoardGame

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
assets/: testGameData.txt
assets/WorldGame/: game.txt
assets/icons/: icon.aps
docs/: changeLog.md  games.md  structure.md
games/WorldGame/: game.txt
include/: app.h  assetManager.h  constants.h  dataTypes.h  debugScreen.h  dice.h  entity.h  game.h  gameApp.h  inputElement.h  label.h  mouseDragController.h  parser.h  player.h  startMenu.h  uiElement.h  utils.h
scripts/: _install.ps1  clean.bat  install.bat  launcher.vbs  mingw.bat  package.py  packageConfig.json  renderAssets.py  test.py  vs.bat
src/: CMakeLists.txt  app.cpp  assetManager.cpp  debugScreen.cpp  dice.cpp  entity.cpp  game.cpp  gameApp.cpp  inputElement.cpp  label.cpp  main.cpp  mouseDragController.cpp  parser.cpp  player.cpp  startMenu.cpp  uiElement.cpp  utils.cpp
